0502 csg